<resources>
    <string name="app_name">ElChecador</string>
    <string name="et_id_empleado">Introduce tu código de empleado:</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="et_contrasenia_admin">Introduce la clave de administrador:</string>
    <string name="modo_admin">Modo administrador</string>
    <string name="btn_registro_empleados">Empleados</string>
    <string name="btn_registro_funciones">Funciones</string>
    <string name="btn_visualizar_funciones">Cambio de funciones</string>
    <string name="et_nombre_empleado">Nombre:</string>
    <string name="et_correo_electronico">Correo electrónico:</string>
    <string name="et_telefono">Teléfono:</string>
</resources>